--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,16 @@
   @tailwind components;
   @tailwind utilities;
 
+
+html, body{
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
+
+
   @layer base {
     :root {
       --background: 0 0% 100%;
